--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -1,2 +1,23 @@
 <!-- Welcome <%# name %> -->
-Dashboard
+<!DOCTYPE html>
+<html lang="en">
+<%- include('head.ejs') %>
+<body>
+    Signed in <%= (name)  %>
+    <button id="unsubscribe">Unsubscribe</button>
+    <dialog id="form">
+        <form action="/dashboard" method="post">
+            <input type="email" name="email" id="email">
+            <input type="password" name="password" id="password">
+            <input type="submit" value="Unsubscribe">
+        </form>
+    </dialog>
+    <script>
+        document.title = "Dashboard";
+        document.querySelector("#unsubscribe").onclick = () => {
+            document.querySelector('#form').showModal();
+        }
+    </script>
+</body>
+</html>
+
